--- a/FIRST WEB SITE/html css and js/html/Howtouse.html
+++ b/FIRST WEB SITE/html css and js/html/Howtouse.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="background.css">
 
 
-    <title>Hello, world!</title>
+    <title>Howtouse</title>
 </head>
 
 <body>
     <!-- nav bar -->
     <nav class="navbar navbar-expand-lg  bg-dark ">
-        <a class="navbar  btn-outline-success my-2 my-sm-0" href="Home.html"> <b>jUSTNOTE</b></a>
+        <a class="navbar btn btn-outline-warning my-2 my-sm-0" href="Home.html"> <b>jUSTNOTE</b></a>
         <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon "></span>
     </button>
@@ -25,35 +25,34 @@
         <div class="collapse navbar-collapse " id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto ">
                 <li class="nav-item active ">
-                    <a class="nav-link  btn-outline-success" href="Home.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link  btn-outline-warning" href="Home.html">Home <span class="sr-only">(current)</span></a>
                 </li>
 
                 <li class="nav-item dropdown ">
-                    <a class="nav-link dropdown-toggle  btn-outline-success my-2 my-sm-0" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle  btn-outline-warning my-2 my-sm-0" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Types
           </a>
                     <div class="dropdown-menu " aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item  btn-outline-success my-2 my-sm-0" href="paragraph.html">Paragraph</a>
-                        <a class="dropdown-item  btn-outline-success my-2 my-sm-0" href="checkbox.html">check box</a>
+                        <a class="dropdown-item  btn-outline-warning my-2 my-sm-0" href="paragraph.html">Paragraph</a>
+                        <a class="dropdown-item  btn-outline-warning my-2 my-sm-0" href="checkbox.html">check box</a>
                         <div class="dropdown-divider "></div>
                     </div>
                 </li>
 
                 <li class="nav-item active">
-                    <a class="nav-link  btn-outline-success my-2 my-sm-0" href="Howtouse.html">How to Use <span class="sr-only">(current)</span></a>
+                    <a class="nav-link btn btn-outline-warning my-2 my-sm-0" href="Howtouse.html">How to Use <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link  btn-outline-success my-2 my-sm-0" href="About.html">About <span class="sr-only">(current)</span></a>
+                    <a class="nav-link  btn-outline-warning my-2 my-sm-0" href="About.html">About <span class="sr-only">(current)</span></a>
                 </li>
 
             </ul>
             <form class="form-inline my-2 my-lg-0 ">
-                <input class="form-control mr-sm-2 btn btn-outline-success my-2 my-sm-0" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <input class="form-control mr-sm-2 btn btn-outline-warning my-2 my-sm-0" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Search</button>
             </form>
         </div>
     </nav>
-
     <h1>Coming Soon</h1>
 
     <!-- Optional JavaScript -->
