--- a/FIRST WEB SITE/html css and js/html/checkbox.html
+++ b/FIRST WEB SITE/html css and js/html/checkbox.html
@@ -10,6 +10,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="background.css">
+    <link rel="stylesheet" href="Home.css">
 
 
     <title>checkbox</title>
@@ -21,7 +22,7 @@
 
     <!-- nav bar -->
     <nav class="navbar navbar-expand-lg  bg-dark ">
-        <a class="navbar  btn-outline-success my-2 my-sm-0" href="Home.html"> <b>jUSTNOTE</b></a>
+        <a class="navbar btn btn-outline-warning my-2 my-sm-0" href="Home.html"> <b>jUSTNOTE</b></a>
         <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon "></span>
     </button>
@@ -29,43 +30,38 @@
         <div class="collapse navbar-collapse " id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto ">
                 <li class="nav-item active ">
-                    <a class="nav-link  btn-outline-success" href="Home.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link  btn-outline-warning" href="Home.html">Home <span class="sr-only">(current)</span></a>
                 </li>
 
                 <li class="nav-item dropdown ">
-                    <a class="nav-link dropdown-toggle  btn-outline-success my-2 my-sm-0" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle btn btn-outline-warning my-2 my-sm-0" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Types
           </a>
                     <div class="dropdown-menu " aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item  btn-outline-success my-2 my-sm-0" href="paragraph.html">Paragraph</a>
-                        <a class="dropdown-item  btn-outline-success my-2 my-sm-0" href="checkbox.html">check box</a>
+                        <a class="dropdown-item  btn-outline-warning my-2 my-sm-0" href="paragraph.html">Paragraph</a>
+                        <a class="dropdown-item btn btn-outline-warning my-2 my-sm-0" href="checkbox.html">check box</a>
                         <div class="dropdown-divider "></div>
                     </div>
                 </li>
 
                 <li class="nav-item active">
-                    <a class="nav-link  btn-outline-success my-2 my-sm-0" href="Howtouse.html">How to Use <span class="sr-only">(current)</span></a>
+                    <a class="nav-link  btn-outline-warning my-2 my-sm-0" href="Howtouse.html">How to Use <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link  btn-outline-success my-2 my-sm-0" href="About.html">About <span class="sr-only">(current)</span></a>
+                    <a class="nav-link  btn-outline-warning my-2 my-sm-0" href="About.html">About <span class="sr-only">(current)</span></a>
                 </li>
 
             </ul>
             <form class="form-inline my-2 my-lg-0 ">
-                <input class="form-control mr-sm-2 btn btn-outline-success my-2 my-sm-0" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <input class="form-control mr-sm-2 btn btn-outline-warning my-2 my-sm-0" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn-outline-warning my-2 my-sm-0" type="submit">Search</button>
             </form>
         </div>
     </nav>
 
     <!-- checkbox -->
 
-    <div class="input-group m-4">
-        <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
-        <div class="input-group-append">
-            <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
-        </div>
-    </div>
+    <input type="checkbox" <label> <input type="text"></label><br>
 
 
 
