This is fully completed

--- a/new-templates/checkbox/todo.html
+++ b/new-templates/checkbox/todo.html
@@ -15,6 +15,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="todo.css">
+    <link rel="stylesheet" href="\new-templates\Home.css">
 
     <title>Todo1</title>
 
