--- a/new-templates/firstpage.html
+++ b/new-templates/firstpage.html
@@ -13,7 +13,7 @@
 </head>
 
 <body style="background-color: #354152;">
-    <nav class="navbar navbar-expand-lg  bg-dark ">
+    <nav class="navbar navbar-expand-lg  bg-dark">
         <a class="navbar btn btn-outline-warning my-2 my-sm-0" href="{% url 'home' %}"> <b>jUSTNOTE</b></a>
         <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" a-label="Toggle navigation">
             <svg width="1em" height="1em" viewBox="0 0 16 16"
@@ -52,7 +52,7 @@
     <br>
 
     <div>
-        <img class=" img21 container-sm" src="\templates\n1.png" alt="">
+        <img class=" img21 container-sm" src="\new-templates\n1.png" alt="">
     </div>
 
     <div class="container-sm">
@@ -118,7 +118,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    -->
+
 </body>
 
 </html>
