--- a/new-templates/login.html
+++ b/new-templates/login.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
     <link rel="shotcut icon" href="{% static 'image/justnote.png' %}" sizes="152 x 152">
+    <link rel="stylesheet" href="Home.css">
     <title>Login</title>
 </head>
 
@@ -18,19 +19,31 @@
 
 
     <!-- nav bar -->
-    <nav class="navbar navbar-expand-lg  bg-dark ">
-        <a class="navbar  btn-outline-success my-2 my-sm-0" href="{% url 'home' %}"> <b>jUSTNOTE</b></a>
-        <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon "></span>
-    </button>
+    <nav class="navbar navbar-expand-lg  bg-dark">
+        <a class="navbar btn btn-outline-warning my-2 my-sm-0" href="{% url 'home' %}"> <b>jUSTNOTE</b></a>
+        <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" a-label="Toggle navigation">
+            <svg width="1em" height="1em" viewBox="0 0 16 16"
+                class="bi bi-border-width btn-outline-warning my-2 my-sm-0" fill="currentColor"
+                xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="M0 3.5A.5.5 0 0 1 .5 3h15a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5H.5a.5.5 0 0 1-.5-.5v-2zm0 5A.5.5 0 0 1 .5 8h15a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H.5a.5.5 0 0 1-.5-.5v-1zm0 4a.5.5 0 0 1 .5-.5h15a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5z" />
+            </svg>
+        </button>
 
-        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+
+        <div class="collapse navbar-collapse  " id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto ">
-                <li class="nav-item active ">
-                    <a class="nav-link  btn-outline-success" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+                <li class="nav-item active">
+                    <a class="nav-link  btn-outline-warning my-2 my-sm-0" href="{% url 'login' %}">Login <span
+                            class="sr-only">(current)</span></a>
                 </li>
-            </ul>
+                <li class="nav-item active">
+                    <a class="nav-link  btn-outline-warning my-2 my-sm-0" href="{% url 'signup' %}">Signin <span
+                            class="sr-only">(current)</span></a>
+                </li>
+
         </div>
+
     </nav>
 
     <!-- form -->
@@ -43,7 +56,7 @@
 
             <h2>Log in</h2>
             {% for mes in messages %}
-                <p style="color:  rgba(255, 0, 0, 0.301);">{{mes}}</p>
+            <p style="color:  rgba(255, 0, 0, 0.301);">{{mes}}</p>
             {% endfor %}
 
             <form action="{% url 'login' %}" method="POST" class="form">
